--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,7 +18,8 @@ pipeline {
         }
         stage('Deliver') {
             steps {
-                bat './jenkins/scripts/deliver.sh'
+                # bat './jenkins/scripts/deliver.sh'
+                echo "Deliver stage executing"
             }
         }
     }
