--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
         }
         stage('Deliver') {
             steps {
-                echo "Deliver stage executing"
+                echo "Deliver stage executing from Branch"
             }
         }
     }
